data/derived/fa15/progs/unify/prog1323.ml.out
Characters 86-87:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b) -> 'c -> 'a -> 'a -> 'b
       but an expression was expected of type ('a -> 'b) -> 'c -> 'a -> 'b
       The type variable 'b occurs inside 'a -> 'b
